Fix mobile overflow bug

--- a/styles/layout/_footer.scss
+++ b/styles/layout/_footer.scss
@@ -48,6 +48,10 @@
       width: 3.2rem;
       height: 3.2rem;
     }
+
+    .tooltip::before {
+      transform: translateX(-2rem);
+    }
   }
 
   p {
